# GRA-Swarm

./: CITATION.cff  GRA-Swarm.rar  License  README.md  bilingvamain.tex  main.tex  paper.tex  pyproject.toml  requirements.txt  setup.py  shema.txt
docs/: index.md
docs/api/: agents.md  foam.md  optimizer.md
docs/theory/: gra_formalism.md  nullification.md  swarm_foam.md
experiments/: __init__.py
experiments/llm_debate/: config.yaml  run.py
experiments/math_problem/: config.yaml  run.py
experiments/optimization/: config.yaml  run.py
notebooks/: 01_quickstart.ipynb  02_foam_visualization.ipynb  03_hierarchy_demo.ipynb
src/gra_swarm/: __init__.py
src/gra_swarm/core/: __init__.py  agent.py  personality.py  policy.py
src/gra_swarm/foam/: __init__.py  calculator.py  diversity.py  metrics.py
src/gra_swarm/hierarchy/: __init__.py  levels.py  projector.py
src/gra_swarm/optimizer/: __init__.py  gra_optimizer.py  scheduler.py
src/gra_swarm/utils/: __init__.py  config.py  visualization.py
src/tests/: __init__.py  test_agent.py  test_foam.py  test_optimizer.py
